# desafio-dataengineer-itlean

./: README.md  pyproject.toml  requirements.txt
src/: logger.py  main.py
src/queries/: amount_sales_per_region.sql  avg_sales_month.sql  most_sale_product.sql  most_sale_product_per_channel.sql
