[tool.poetry]
name = "desafio-dataengineer-itlean"
version = "0.1.0"
description = ""
authors = ["Paulo Werneck <werneck.suporte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
